--- a/package.yaml
+++ b/package.yaml
@@ -24,7 +24,7 @@ default-extensions:
   - OverloadedStrings
 
 executables:
-  simple-json-api-haskell-exe:
+  teapot-exe:
     main:                Main.hs
     source-dirs:         src
     ghc-options:
