added info -> json

--- a/package.yaml
+++ b/package.yaml
@@ -10,12 +10,13 @@ extra-source-files:
 
 dependencies:
 - base >= 4.7 && < 5
-- aeson
 - containers
+- aeson
 - mtl
 - text
 - scotty
 - http-types
+- cmdargs
 
 default-extensions:
   - DeriveGeneric
